--- a/index.html
+++ b/index.html
@@ -1,65 +1,132 @@
 <!DOCTYPE html>
 <html class="no-js">
-<!-- 
-    
- -->
-
 <head>
-    <meta charset="utf-8">
-    <title> This is my title </title>
+    <!--
+    New Perspectives on HTML5 and CSS3, 7th Edition
+    Tutorial 3
+    Case Problem 4
+    
+    Park City Gazette
+    Author: Melinda Chirila
+    Date:  10/30/ss18 
+    Filename: pcg_front.html
+   -->
     <link rel="stylesheet" href="pcg_paper.css">
+    <meta charset="utf-8" />
 </head>
-
 <body>
-    <h1>Local Woman Wins Marathon</h1>
-    <p>Estes Park native Laura Blake won the 27th Front Range Marathon over an elite field of the best long-distance
-        runners in the country. Laura's time of 2 hr. 28 min. 21 sec. was only 2 minutes off the women's course record
-        set last year by Sarah Rawlings. Kathy Lasker and Lisa Peterson finished second and third, respectively.
-        Laura's victory came on the heels of her performance at the NCAA Track and Field Championships, in which she
-        placed second running for Colorado State.</p>
-
-    <p>In an exciting race, Peter Teagan of San Antonio, Texas, used a finishing kick to win the men's marathon for the
-        second straight year, in a time of 2 hr. 12 min. 34 sec. Ahead for much of the race, Kyle Wills of Billings,
-        Montana, finished second when he could not match Teagan's finishing pace. Jason Wu of Boulder, Colorado, placed
-        third in a very competitive field.</p>
-
-    <p>This year's race through downtown Boulder boasted the largest field in the marathon's history, with over 9500
-        men and 6700 women competing. Race conditions were perfect with low humidity and temperatures that never
-        exceeded 85 degrees.</p>
-
-    <h1>Highway 7 Reopens</h1>
-    <p>Highway 7 will reopen this Friday, June 3rd, after a final safety inspection. A late blizzard delayed road
-        crews, marking this as one of the latest dates on record for the highway's reopening.</p>
-
-    <p>Rising to an elevation of over 12,000 feet, Highway 7 is a main link between Estes Park and Grand Lake. The
-        reopening of the road is one of the annual signs that summer is near and the tourist season will soon be upon
-        us!</p>
-
-    <h1>Cougar Sightings Increase</h1>
-    <p>Cougar sightings have increased 40% in the Este Park area according to a report released yesterday by the state
-        DNR. In the last month alone, there were ten sightings in Estes Park and the surrounding communities of Grand
-        Lake and Pinewood Springs. This compares to only twelve sightings for the entire spring of last year.</p>
-
-    <p>Reasons for the growing number of cougar sightings include increasing encroachment by people into former
-        wildlife habitats and new wildlife regulations that result in decreasing numbers of elk and deer being taken by
-        hunters. Cougars may be wandering into developed areas, following the herds.</p>
-
-    <p>DNR spokesman Steve Tasker asks residents to call the DNR report line at 555-6981 if they believe they have seen
-        a cougar or any large predatory animal. Two fatalities have already occurred in the west this year from cougar
-        attacks</p>
-
-    <h1>If You Encounter a Cougar</h1>
-    <p>Stop, stand tall, and don't run. A cougar's instinct is to chase.</p>
-
-    <p>Try to appear larger than the cougar by raising your arms.</p>
-
-    <p>Back away slowly, always keeping eye contact.</p>
-
-    <p>If the cougar displays aggressive behavior, shout and wave your arms. Convince the cougar that you are not prey,
-        but a potential danger.</p>
-
-    <p>In case of an attack, stay on your feet and fight back aggressively.</p>
-
+    <header>
+        <img id="logo" src="pcglogo.jpg" alt="Logo">
+    </header>
+    <section>
+        <nav id="nav1">
+            <a href="#">Home Page</a>
+            <a href="#">News</a>
+            <a href="#">Local</a>
+            <a href="#">State</a>
+            <a href="#">National</a>
+            <a href="#">International</a>
+            <a href="#">Sports</a>
+            <a href="#">Weather</a>
+        </nav>
+        <nav id="nav2">
+            <a href="#">Classifieds</a>
+            <a href="#">For Sale</a>
+            <a href="#">Wanted</a>
+            <a href="#">Employment</a>
+            <a href="#">Real Estate</a>
+            <a href="#">Personal</a>
+        </nav>
+        <nav id="nav3">
+            <a href="#">Tourism</a>
+            <a href="#">Attractions</a>
+            <a href="#">Events</a>
+            <a href="#">Parks</a>
+            <a href="#">Camping</a>
+        </nav>
+    </section>
+    <aside>
+        <li> <a href="#">Subscriptions</a> </li>
+        <li> <a href="#">Contact Us</a> </li>
+    </aside>
+    <h1>Main Articles</h1>
+    <section id=midsec>
+        <article id="story1">
+            <h2> Local Woman Wins Marathon</h2>
+            <img id="blake" src="blake.jpg" alt="blake">
+            <p> Estes Park native Laura Blake won the 27th Front Range Marathon over an elite field of the best
+                long-distance
+                runners in the country. Laura's time of 2 hr. 28 min. 21 sec. was only 2 minutes off the women's course
+                record
+                set last year by Sarah Rawlings. Kathy Lasker and Lisa Peterson finished second and third,
+                respectively.
+                Laura's victory came on the heels of her performance at the NCAA Track and Field Championships, in
+                which
+                she
+                placed second running for Colorado State.
+                In an exciting race, Peter Teagan of San Antonio, Texas, used a finishing kick to win the men's
+                marathon
+                for
+                the second straight year, in a time of 2 hr. 12 min. 34 sec. Ahead for much of the race, Kyle Wills of
+                Billings, Montana, finished second when he could not match Teagan's finishing pace. Jason Wu of
+                Boulder,
+                Colorado, placed third in a very competitive field.
+                This year's race through downtown Boulder boasted the largest field in the marathon's history, with
+                over
+                9500
+                men and 6700 women competing. Race conditions were perfect with low humidity and temperatures that
+                never
+                exceeded 85 degrees.</p>
+        </article>
+        <article id="story2">
+            <h2> Highway 7 Reopens</h2>
+            Cougar sightings have increased 40% in the Este Park area according to a report released yesterday by the
+            state
+            DNR. In the last month alone, there were ten sightings in Estes Park and the surrounding communities of
+            Grand
+            Lake and Pinewood Springs. This compares to only twelve sightings for the entire spring of last year.
+            Reasons for the growing number of cougar sightings include increasing encroachment by people into former
+            wildlife habitats and new wildlife regulations that result in decreasing numbers of elk and deer being
+            taken by
+            hunters. Cougars may be wandering into developed areas, following the herds.
+            DNR spokesman Steve Tasker asks residents to call the DNR report line at 555-6981 if they believe they have
+            seen a cougar or any large predatory animal. Two fatalities have already occurred in the west this year
+            from
+            cougar attacks.
+        </article>
+        <article id="story4">
+            <h2>If You Encounter a Cougar</h2>
+            Stop, stand tall, and don't run. A cougar's instinct is to chase.
+            Try to appear larger than the cougar by raising your arms.
+            Back away slowly, always keeping eye contact.
+            If the cougar displays aggressive behavior, shout and wave your arms. Convince the cougar that you are not
+            prey, but a potential danger.
+            In case of an attack, stay on your feet and fight back aggressively.
+        </article>
+    </section>
+    <section id=lastsection>
+        <h2>Other Stories</h2>
+        <ul id=lastlist>
+            <li><a href="#">Complete Marathon Results</a> </li>
+            <li><a href="#">National Park Acquires Land</a> </li>
+            <li><a href="#">School Board Election Results</a> </li>
+            <li><a href="#">Spending Referendum Defeated</a> </li>
+            <li><a href="#">Graduation Awards</a> </li>
+        </ul>
+        <ul id=lastlist2>
+            <li><a href="#">New Highway Proposed</a> </li>
+            <li><a href="#">Camping Tips</a> </li>
+            <li><a href="#story3">Cougar Sightings Increase</a> </li>
+            <li><a href="#">Editorials</a> </li>
+            <li><a href="#">Park City Profile</a> </li>
+        </ul>
+    </section>
+    <footer>
+        <li> Park City Gazette</li>&#8226;
+        <li>801 Elkhart Avenue</li>&#8226;
+        <li>Estes Park, CO 80511</li>&#8226;
+        <li>1 (800) 555-2918</li>
+    </footer>
+    <script src="" async defer></script>
 </body>
-
 </html>
